yaml/deployment-api.yaml
# Example shell-operator pod used during development
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veverse-api
  labels:
    app: veverse-api
spec:
  selector:
    matchLabels:
      app: veverse-api
  template:
    metadata:
      labels:
        app: veverse-api
    spec:
      serviceAccountName: veverse-acc
      imagePullSecrets:
        - name: dev-hackerman-me
      containers:
        - name: veverse-api
          image: registry.dev.hackerman.me/artheon/shell-operator:api
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: veverse-api
  labels:
    app: veverse-api
spec:
  selector:
    app: veverse-api
  ports:
    - name: http
      protocol: TCP
      port: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: veverse-api
  labels:
    app: veverse-api
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "3000m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: veverse-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: veverse-api
                port:
                  number: 80
